--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,6 @@
     <input type="text" id="search-box" />
     <ul class="country-list"></ul>
     <div class="country-info"></div>
-    <script src="index.js" type="module"></script>
+    <script src='index.ts' type="module"></script>
   </body>
 </html>
